# backend_codebase

./: .env  README.md  alembic.ini  pyproject.toml
src/backend_codebase/: __init__.py  ai_integration.py  config.py  main.py  models.py  schemas.py  services.py  validation.py  views.py
src/backend_codebase/migrations/: env.py
src/backend_codebase/migrations/versions/: 9dcdf06c17a3_create_user_inputs_table.py  create_users_table.py
tests/: test_ai_integration.py  test_main.py  test_migrations.py  test_models.py  test_services.py  test_validation.py  test_views.py
